Fixed tile overlap issues (sort tiles, update CSS) and set up proper free tile highlight

--- a/src/app/mj.tile-collection.css
+++ b/src/app/mj.tile-collection.css
@@ -15,6 +15,14 @@
   height: 277px;
 }
 
+/*.tile-outer:hover {*/
+.tile.free:hover {
+  transform-origin: 50% 50%;
+  transform: scale(1.15,1.15);
+  z-index: 500; /* https://philipwalton.com/articles/what-no-one-told-you-about-z-index/ */
+  opacity: .99;
+}
+
 .tile-shadow {
   position: absolute;
   top: 8px;
@@ -24,7 +32,6 @@
   border: 1px solid black;
   background-color: lightgray;
   border-radius: 18px;
-  opacity: .99;
 }
 
 .tile-shadow2 {
@@ -50,7 +57,7 @@
   width: 194px; /* minus 6 for border */
   height: 265px;
   word-wrap: break-word;
-  z-index: 250; /* tiles are in the context of their container, so this will just put tile face to always be on top inside the outer tile div */
+  /*z-index: 250;*/
 }
 
 .tile.selected {
@@ -58,42 +65,30 @@
   color: white;
 }
 
-/*.tile:hover {
-  transform-origin: 50% 50%;
-  transform: scale(1.1,1.1);
-  z-index: 250; /* https://philipwalton.com/articles/what-no-one-told-you-about-z-index/ */
-}*/
-
 .tile.hidden {
   display: none;
 }
 
 .layer0 .tile {
   background-color: green;
-  /*z-index: 5;*/
 }
 
 .layer1 .tile {
   background-color: blue;
-  /*z-index: 15;*/
 }
 
 .layer2 .tile {
   background-color: pink;
-  /*z-index: 25;*/
 }
 
 .layer3 .tile {
   background-color: yellow;
 }
-/*z-index: 35;*/
 
 .layer4 .tile {
   background-color: green;
-  /*z-index: 45;*/
 }
 
 .layer5 .tile {
   background-color: green;
-  /*z-index: 55;*/
 }
